# sudapy

./: .gitignore  404.html  CHANGELOG.md  INSTALL_OFFLINE.md  INSTALL_WINDOWS.md  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/crs/: index.html
api/errors/: index.html
api/raster/: index.html
api/sentinel/: index.html
api/vector/: index.html
api/viz/: index.html
changelog/: index.html
cli/: index.html
contributing/: index.html
docs/: changelog.md  cli.md  contributing.md  index.md  installation.md  quickstart.md
docs/api/: crs.md  errors.md  raster.md  sentinel.md  vector.md  viz.md
docs/getting-started/: installation.md  offline.md  project-init.md  quickstart.md
docs/guide/: batch.md  crs.md  raster.md  remote-sensing.md  vector.md  visualization.md
getting-started/installation/: index.html
getting-started/offline/: index.html
getting-started/project-init/: index.html
getting-started/quickstart/: index.html
guide/batch/: index.html
guide/crs/: index.html
guide/raster/: index.html
guide/remote-sensing/: index.html
guide/vector/: index.html
guide/visualization/: index.html
scripts/: README_BUNDLE.txt  build_wheelhouse.py  run_sudapy.bat  sudapy_doctor.bat
search/: search_index.json
src/sudapy/: __init__.py
src/sudapy/cli/: main.py
src/sudapy/core/: errors.py  logging.py
src/sudapy/crs/: registry.py
src/sudapy/raster/: ops.py
src/sudapy/rs/: sentinel.py
src/sudapy/vector/: ops.py
src/sudapy/viz/: maps.py
tests/: test_crs.py  test_vector.py
